# Hillock

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: file.hpp  filepath.hpp  hotkey.hpp  keyedit.hpp  mainwindow.h  mainwindow.ui  mapper.hpp  process.hpp  runner.hpp  runners.hpp
include/view/: keyedit.hpp  mainwindow.h  mainwindow.ui  runners_decorator.hpp  tray.hpp
resources/: icon32x32.xcf  qt_resources.qrc  win_resources.rc
src/: CMakeLists.txt  file.cpp  filepath.cpp  hotkey.cpp  keyedit.cpp  main.cpp  mainwindow.cpp  mapper.cpp  process.cpp  runner.cpp  runners.cpp
src/view/: keyedit.cpp  mainwindow.cpp  runners_decorator.cpp  tray.cpp
